--- a/lang/php5/Makefile
+++ b/lang/php5/Makefile
@@ -1,15 +1,15 @@
-# $NetBSD: Makefile,v 1.14 2005/09/03 13:37:36 adrianp Exp $
+# $NetBSD: Makefile,v 1.13 2005/05/22 20:08:10 jlam Exp $
 #
 
 PKGNAME=		php-${PHP_BASE_VERS}
-PKGREVISION=		1
+PKGREVISION=		# empty
 CATEGORIES=		lang
 
 HOMEPAGE=		http://www.php.net/
 COMMENT=		PHP Hypertext Preprocessor version 5
 
 USE_PKGINSTALL=		YES
-USE_TOOLS+=		gmake gzcat
+USE_TOOLS+=		gmake
 LIBTOOL_OVERRIDE=	# empty
 
 .include "Makefile.php"
@@ -20,18 +20,8 @@ CONFIGURE_ARGS+=	--enable-force-cgi-redirect
 CGIDIR=			${PREFIX}/libexec/cgi-bin
 EGDIR=			${PREFIX}/share/examples/php
 
-EXTRACT_ONLY=			${DISTNAME}${EXTRACT_SUFX}
-XMLRPC_DISTFILE=		XML_RPC-1.4.0.tgz
-SITES_${XMLRPC_DISTFILE}=	http://pear.php.net/get/
-DISTFILES=			${EXTRACT_ONLY} ${XMLRPC_DISTFILE}
-
 CONF_FILES=		${EGDIR}/php.ini-recommended ${PKG_SYSCONFDIR}/php.ini
 OWN_DIRS=		${PREFIX}/${PHP_EXTENSION_DIR}
-
-post-extract:
-	${RM} -f ${WRKSRC}/pear/packages/XML_RPC-1.2.2.tar
-	${GZCAT} ${DISTDIR}/${XMLRPC_DISTFILE} \
-		>${WRKSRC}/pear/packages/${XMLRPC_DISTFILE:S/.tgz/.tar/}
 
 post-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/sapi/cli/php ${PREFIX}/bin/php
