--- a/mail/thunderbird-gtk1/Makefile
+++ b/mail/thunderbird-gtk1/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2004/08/10 14:27:17 taya Exp $
+# $NetBSD: Makefile,v 1.1.1.1 2005/04/02 14:45:51 abs Exp $
 
 MOZILLA=	thunderbird-gtk1
+PKGREVISION=	1
 
 COMMENT=	Mozilla mail client using the older GTK1 toolkit
 
