--- a/www/firefox-gtk1/Makefile
+++ b/www/firefox-gtk1/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2004/08/10 14:04:01 taya Exp $
+# $NetBSD: Makefile,v 1.2 2005/02/27 15:15:24 taya Exp $
 
 MOZILLA=	firefox-gtk1
+PKGREVISION=	1
 
 COMMENT=	Lightweight gecko-based web browser built with GTK1
 
