--- a/www/mozilla/Makefile
+++ b/www/mozilla/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.148 2005/08/16 00:33:44 taya Exp $
+# $NetBSD: Makefile,v 1.149 2005/08/21 00:39:16 taya Exp $
 
 MOZILLA=	mozilla
 MOZILLA_BIN=	mozilla-bin
 MOZ_VER=	1.7.11
 EXTRACT_SUFX=	.tar.bz2
+PKGREVISION=	1
 
 DISTFILES=	${DISTNAME}${EXTRACT_SUFX}
 #DISTFILES+=    mozilla-source-1.7.3-libart_lgpl.tar.bz2
