--- a/misc/Addresses/Makefile
+++ b/misc/Addresses/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.6 2005/04/11 21:46:33 tv Exp $
+# $NetBSD: Makefile,v 1.7 2005/06/01 18:03:04 jlam Exp $
 #
 
 DISTNAME=		Addresses-0.4.6
 CATEGORIES=		misc gnustep
 MASTER_SITES=		http://giesler.biz/bjoern/downloads/
+PKGREVISION=	1
 
 MAINTAINER=		tech-pkg@NetBSD.org
 HOMEPAGE=		http://giesler.biz/bjoern/en/sw_addr.html
