--- a/chat/gaim-otr/Makefile
+++ b/chat/gaim-otr/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2005/05/22 20:07:42 jlam Exp $
+# $NetBSD: Makefile,v 1.4 2005/07/27 19:18:14 gdt Exp $
 
 DISTNAME=	gaim-otr-2.0.2
+PKGREVISION=	1
 CATEGORIES=	chat security
 MASTER_SITES=	http://www.cypherpunks.ca/otr/
 
