--- a/editors/texmaker/Makefile
+++ b/editors/texmaker/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2005/09/08 19:59:13 drochner Exp $
 
 DISTNAME=	texmaker-1.12
 CATEGORIES=	editors
 MASTER_SITES=	http://www.xm1math.net/texmaker/
-MASTER_SITES+=	http://www.epidauros.be/pkgsrc/	### TEMPORARY!
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	geert.hendrickx@ua.ac.be
