--- a/misc/fep/Makefile
+++ b/misc/fep/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.13 2004/01/20 12:21:01 agc Exp $
+# $NetBSD: Makefile,v 1.14 2005/03/24 21:12:57 wiz Exp $
 
 DISTNAME=	fep
 PKGNAME=	fep-1.0
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	misc
 MASTER_SITES=	ftp://ftp.sra.co.jp/pub/cmd/fep/
 
