--- a/sysutils/xfce4-systemload-plugin/Makefile
+++ b/sysutils/xfce4-systemload-plugin/Makefile
@@ -1,10 +1,11 @@
-# $NetBSD: Makefile,v 1.7 2004/10/03 00:18:17 tv Exp $
+# $NetBSD: Makefile,v 1.8 2005/06/23 07:25:58 martti Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
 XFCE4_VERSION=	0.3.6
 
 DISTNAME=	xfce4-systemload-plugin-${XFCE4_VERSION}
+PKGREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	http://download.berlios.de/xfce-goodies/
 COMMENT=	XFce4 system load plugin
