--- a/multimedia/mplayer-share/Makefile.common
+++ b/multimedia/mplayer-share/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.21 2005/05/22 20:08:22 jlam Exp $
+# $NetBSD: Makefile.common,v 1.22 2005/06/01 18:45:46 jmmv Exp $
 
 MPLAYER_DIST_VERSION=	1.0pre7
 
@@ -7,10 +7,11 @@ MPLAYER_PKG_VERSION=	1.0rc7
 
 DISTNAME=		MPlayer-${MPLAYER_DIST_VERSION}
 CATEGORIES?=		multimedia
-MASTER_SITES=		http://www.mplayerhq.hu/MPlayer/releases/ \
-			http://www2.mplayerhq.hu/MPlayer/releases/ \
-			ftp://ftp.mplayerhq.hu/MPlayer/releases/ \
-			ftp://ftp2.mplayerhq.hu/MPlayer/releases/
+MASTER_SITES=		http://www1.mplayerhq.hu/MPlayer/releases/ \
+			http://ftp5.mplayerhq.hu/mplayer/releases/ \
+			http://www4.mplayerhq.hu/MPlayer/releases/ \
+			ftp://ftp2.mplayerhq.hu/MPlayer/releases/ \
+			ftp://ftp5.mplayerhq.hu/mplayer/releases/
 EXTRACT_SUFX=		.tar.bz2
 DIST_SUBDIR=		mplayer-${MPLAYER_PKG_VERSION}
 
