--- a/net/nmap/Makefile
+++ b/net/nmap/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.43 2005/02/09 13:58:41 salo Exp $
+# $NetBSD: Makefile,v 1.44 2005/04/11 21:46:52 tv Exp $
 #
 
-DISTNAME=	nmap-3.81
+DISTNAME=	nmap-3.93
 CATEGORIES=	net security
 MASTER_SITES=	http://www.insecure.org/nmap/dist/
 EXTRACT_SUFX=	.tar.bz2
@@ -13,7 +13,11 @@ COMMENT=	Network/port scanner with OS detection
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 USE_LANGUAGES=		c c++
-GNU_CONFIGURE=		YES
+USE_LIBTOOL=		yes
+GNU_CONFIGURE=		yes
+
+LIBTOOL_OVERRIDE=	libdnet-stripped/libtool
+
 CONFIGURE_ARGS+=	--with-libpcap=${BUILDLINK_PREFIX.libpcap}
 CONFIGURE_ARGS+=	--with-libpcre=${BUILDLINK_PREFIX.libpcre}
 CONFIGURE_ARGS+=	--with-openssl=${BUILDLINK_PREFIX.openssl}
