--- a/net/nmapfe/Makefile
+++ b/net/nmapfe/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.31 2005/04/11 21:46:52 tv Exp $
+# $NetBSD: Makefile,v 1.32 2005/06/17 03:50:26 jlam Exp $
 #
 
-DISTNAME=	nmap-3.81
+DISTNAME=	nmap-3.93
 PKGNAME=	nmapfe-0.9.5
-PKGREVISION=	20
+PKGREVISION=	21
 CATEGORIES=	net security
 MASTER_SITES=	http://www.insecure.org/nmap/dist/
 EXTRACT_SUFX=	.tar.bz2
