--- a/multimedia/gnome2-media/Makefile
+++ b/multimedia/gnome2-media/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.18 2005/07/21 16:29:53 wiz Exp $
+# $NetBSD: Makefile,v 1.19 2005/08/10 20:56:20 jlam Exp $
 
 DISTNAME=		gnome-media-2.10.2
+PKGREVISION=		1
 CATEGORIES=		multimedia gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gnome-media/2.10/}
 EXTRACT_SUFX=		.tar.bz2
