--- a/devel/memcached/Makefile
+++ b/devel/memcached/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.2 2005/02/09 05:53:32 xtraeme Exp $
+# $NetBSD: Makefile,v 1.3 2005/04/11 21:45:28 tv Exp $
 #
 
 DISTNAME=	memcached-1.1.11
+PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	http://www.danga.com/memcached/dist/
 
