--- a/devel/semi/Makefile
+++ b/devel/semi/Makefile
@@ -1,4 +1,9 @@
-# $NetBSD: Makefile,v 1.17 2005/03/05 16:40:48 minskim Exp $
+# $NetBSD: Makefile,v 1.19 2005/08/28 04:28:54 uebayasi Exp $
+#
+# TODO:
+# * Control ${WRKSRC}/SEMI-ELS explicitly, otherwise Emacs/XEmacs founds
+#   bbdb / w3 if installed.
+#
 
 DISTNAME=	semi-1.14.6
 PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
