--- a/chat/silc-client/Makefile
+++ b/chat/silc-client/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.38 2005/04/11 21:45:05 tv Exp $
+# $NetBSD: Makefile,v 1.39 2005/05/22 20:07:43 jlam Exp $
 #
 
 DISTNAME=		${SILC_CLIENT_DISTNAME}
+PKGREVISION=		1
 CATEGORIES=		chat security
 MASTER_SITES=		http://www.silcnet.org/download/client/sources/ \
 			ftp://ftp.silcnet.org/silc/client/sources/ \
