--- a/mail/thunderbird/Makefile
+++ b/mail/thunderbird/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2005/06/03 14:41:30 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2005/09/08 22:03:45 abs Exp $
 
 MOZILLA=	thunderbird
 PKGREVISION=	1
@@ -9,3 +9,4 @@ _MOZILLA_USE_GTK2=	# defined
 MOZILLA_USE_XFT=	YES
 
 .include "../../mail/thunderbird/Makefile-thunderbird.common"
+.include "../../mk/bsd.pkg.mk"
