--- a/lang/ruby16-base/Makefile
+++ b/lang/ruby16-base/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.2 2005/03/10 06:20:17 taca Exp $
+# $NetBSD: Makefile,v 1.3 2005/04/11 21:46:16 tv Exp $
 #
 
 DISTNAME=	${RUBY_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-base-${RUBY_VERSION}
+PKGREVISION=	1
 CATEGORIES=	lang ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
 
