--- a/games/xvier/Makefile
+++ b/games/xvier/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.7 2003/07/17 21:39:49 grant Exp $
+# $NetBSD: Makefile,v 1.8 2003/07/21 16:50:04 martti Exp $
 
 DISTNAME=	xvier
 PKGNAME=	xvier-1.0
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_SUNSITE:=games/strategy/}
 EXTRACT_SUFX=	.tar.Z
