--- a/databases/postgresql80-plperl/Makefile
+++ b/databases/postgresql80-plperl/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2005/06/24 05:56:25 jlam Exp $
+# $NetBSD: Makefile,v 1.1.1.1 2005/08/06 06:24:31 jlam Exp $
 
 PKGNAME=	postgresql80-plperl-${BASE_VERS}
+PKGREVISION=	1
 COMMENT=	PL/Perl procedural language for the PostgreSQL backend
 
 DEPENDS+=	postgresql80-server>=${BASE_VERS}:../../databases/postgresql80-server
