--- a/devel/cscope/Makefile
+++ b/devel/cscope/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.39 2005/05/22 20:07:50 jlam Exp $
+# $NetBSD: Makefile,v 1.40 2005/08/07 19:47:23 tron Exp $
 
 DISTNAME=	cscope-15.4
 PKGREVISION=	4
@@ -10,10 +10,10 @@ HOMEPAGE=	http://cscope.sourceforge.net/
 COMMENT=	Interactive C program browser
 
 GNU_CONFIGURE=		YES
-USE_TOOLS+=		yacc lex
+USE_TOOLS+=		byacc lex
 
 CONFIGURE_ARGS+=	--with-ncurses=${BUILDLINK_PREFIX.ncurses}
-CONFIGURE_ARGS+=	--without-bison --with-flex
+CONFIGURE_ARGS+=	--with-flex --with-yacc
 
 .include "../../devel/ncurses/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
