--- a/shells/ast-ksh/Makefile
+++ b/shells/ast-ksh/Makefile
@@ -1,5 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2003/05/31 16:14:47 uebayasi Exp $
+# $NetBSD: Makefile,v 1.11 2003/08/11 17:27:55 wiz Exp $
 #
 .include "Makefile.common"
+
+PKGREVISION=	1
 
 .include "../../mk/bsd.pkg.mk"
