--- a/shells/bash/Makefile
+++ b/shells/bash/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2005/07/07 21:30:54 tron Exp $
+# $NetBSD: Makefile,v 1.11 2005/07/29 18:32:17 jlam Exp $
 
 DISTNAME=	bash-3.0
 PKGNAME=	bash-3.0pl16
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	shells
 MASTER_SITES=	${MASTER_SITE_GNU:=bash/} \
 		ftp://ftp.cwru.edu/pub/bash/
