--- a/shells/bash2/Makefile
+++ b/shells/bash2/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.64 2005/07/01 16:11:05 minskim Exp $
+# $NetBSD: Makefile,v 1.65 2005/07/29 18:32:17 jlam Exp $
 #
 
 DISTNAME=	bash-2.05b
 PKGNAME=	bash-2.05.2.7
-PKGREVISION=	5
+PKGREVISION=	6
 CATEGORIES=	shells
 MASTER_SITES=	${MASTER_SITE_GNU:=bash/} \
 		ftp://ftp.cwru.edu/pub/bash/
