--- a/shells/posh/Makefile
+++ b/shells/posh/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.4 2005/04/11 21:47:21 tv Exp $
+# $NetBSD: Makefile,v 1.5 2005/07/29 18:32:18 jlam Exp $
 #
 
 DISTNAME=	posh_0.3.14
 PKGNAME=	${DISTNAME:S/_/-/}
+PKGREVISION=	1
 CATEGORIES=	shells
 MASTER_SITES=	${MASTER_SITE_DEBIAN:=pool/main/p/posh/}
 
