--- a/shells/static-ast-ksh/Makefile
+++ b/shells/static-ast-ksh/Makefile
@@ -1,6 +1,8 @@
-# $NetBSD: Makefile,v 1.2 2003/08/11 17:27:58 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2004/01/11 23:06:54 grant Exp $
 #
 .include "../../shells/ast-ksh/Makefile.common"
+
+PKGREVISION=	1
 
 CONFLICTS=	ast-ksh-[0-9]*	# Override.
 
