--- a/multimedia/xine-lib/Makefile.common
+++ b/multimedia/xine-lib/Makefile.common
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile.common,v 1.24 2005/07/29 16:09:11 drochner Exp $
+# $NetBSD: Makefile.common,v 1.25 2005/08/10 20:56:21 jlam Exp $
 #
 
 DISTNAME=		xine-lib-1.0.2
 XINE_PKGNAME=		xine-lib-1.0.2
 PKGNAME?=		${XINE_PKGNAME}
+PKGREVISION=		1
 CATEGORIES?=		multimedia
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=xine/}
 
