--- a/www/ap2-fastcgi/Makefile
+++ b/www/ap2-fastcgi/Makefile
@@ -1,10 +1,12 @@
-# $NetBSD: Makefile,v 1.2 2004/12/09 22:52:03 seb Exp $
+# $NetBSD: Makefile,v 1.3 2005/05/21 04:10:18 jlam Exp $
 
 .include "../../www/ap-fastcgi/Makefile.common"
 
 PKGNAME=		${DISTNAME:S/mod_/ap2-/}
+PKGREVISION=		1
 PKG_APACHE_ACCEPTED=	apache2
 APACHE_MANUAL=		manual
+APACHE_MODULE=		# defined
 USE_LIBTOOL=		YES
 
 MAKE_FLAGS+=		LIBTOOL=${LIBTOOL:Q}
@@ -17,5 +19,5 @@ SUBST_SED.ap2=		-e s,/usr/local/apache2,${PREFIX}/share/httpd,
 post-patch:
 	${CP} ${WRKSRC}/Makefile.AP2 ${WRKSRC}/Makefile
 
-.include "../../mk/apache.mk"
+.include "../../www/apache2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
