--- a/lang/ruby16-base/Makefile
+++ b/lang/ruby16-base/Makefile
@@ -1,11 +1,14 @@
-# $NetBSD: Makefile,v 1.3 2005/04/11 21:46:16 tv Exp $
+# $NetBSD: Makefile,v 1.4 2005/09/18 13:36:30 taca Exp $
 #
 
 DISTNAME=	${RUBY_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-base-${RUBY_VERSION}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	lang ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
+
+PATCH_SITES=	${MASTER_SITE_RUBY}
+PATCHFILES=	1.6.8-patch1.gz
 
 MAINTAINER=	taca@NetBSD.org
 HOMEPAGE=	${RUBY_HOMEPAGE}
