--- a/multimedia/gst-plugins-dvdnav/Makefile
+++ b/multimedia/gst-plugins-dvdnav/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2005/05/04 16:22:31 drochner Exp $
+# $NetBSD: Makefile,v 1.3 2005/05/25 21:07:59 jmmv Exp $
 #
 
 GST_PLUGINS_NAME=	dvdnav
@@ -7,4 +7,5 @@ GST_PLUGINS_DIR=	ext/dvdnav
 .include "../../multimedia/gst-plugins/Makefile.common"
 
 .include "../../multimedia/libdvdnav/buildlink3.mk"
+.include "../../multimedia/libdvdread/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
