--- a/www/kannel/Makefile
+++ b/www/kannel/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.27 2005/05/22 20:08:45 jlam Exp $
+# $NetBSD: Makefile,v 1.28 2005/07/16 01:19:25 jlam Exp $
 #
 
 DISTNAME=	gateway-${KANNEL_VER}
 PKGNAME=	kannel-${KANNEL_VER}
+PKGREVISION=	1
 CATEGORIES=	www net
 MASTER_SITES=	http://www.kannel.org/download/${KANNEL_VER}/
 EXTRACT_SUFX=	.tar.bz2
