--- a/audio/ifp-line/Makefile
+++ b/audio/ifp-line/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2005/04/11 21:44:53 tv Exp $
+# $NetBSD: Makefile,v 1.8 2005/05/24 13:53:48 rillig Exp $
 
 DISTNAME=		ifp-line-0.2.4.4
+PKGREVISION=		1
 CATEGORIES=		audio
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=ifp-driver/}
 
