--- a/security/libgpg-error/Makefile
+++ b/security/libgpg-error/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2005/05/15 22:22:48 jschauma Exp $
+# $NetBSD: Makefile,v 1.12 2005/05/22 20:08:30 jlam Exp $
 #
 
 DISTNAME=	libgpg-error-1.0
@@ -18,7 +18,9 @@ USE_PKGLOCALEDIR=	YES
 .include "../../mk/bsd.prefs.mk"
 
 # XXX See HACKS
-.if ${OPSYS} != IRIX
+.if ${OPSYS} == IRIX || !empty(MACHINE_PLATFORM:MNetBSD-3*)
+USE_TOOLS+=		nawk
+.else
 USE_TOOLS+=		gawk
 .endif
 
