--- a/chat/gaim-encryption/Makefile
+++ b/chat/gaim-encryption/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.4 2005/06/01 18:02:41 jlam Exp $
+# $NetBSD: Makefile,v 1.5 2005/09/12 00:35:01 gdt Exp $
 
 DISTNAME=	gaim-encryption-2.38
 CATEGORIES=	chat security
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=gaim-encryption/}
 
-MAINTAINER=	ggm@pobox.com
+MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://gaim-encryption.sourceforge.net/
 COMMENT=	Plugin for gaim to add TLS/SSL via nss/nspr
 
