--- a/emulators/Makefile
+++ b/emulators/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.135 2005/08/07 16:17:43 recht Exp $
+# $NetBSD: Makefile,v 1.136 2005/08/30 11:08:18 xtraeme Exp $
 #
 
 COMMENT=	Emulators for other operating systems
@@ -89,7 +89,7 @@ SUBDIR+=	suse91_gtk2
 SUBDIR+=	suse91_libjpeg
 SUBDIR+=	suse91_libpng
 SUBDIR+=	suse91_libtiff
-#SUBDIR+=	suse91_linux
+#SUBDIR+=	suse91_linux		# only contains Makefile fragments
 SUBDIR+=	suse91_locale
 SUBDIR+=	suse91_openmotif
 SUBDIR+=	suse91_slang
