--- a/mail/mutt/Makefile
+++ b/mail/mutt/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.126 2005/05/29 03:44:12 minskim Exp $
+# $NetBSD: Makefile,v 1.127 2005/08/19 18:12:38 jlam Exp $
 
 DISTNAME=		mutt-1.4.2.1i
 PKGNAME=		${DISTNAME:C/i$//}
-PKGREVISION=		3
+PKGREVISION=		4
 CATEGORIES=		mail
 MASTER_SITES=		ftp://ftp.mutt.org/mutt/ \
 			ftp://ftp.stealth.net/pub/mirrors/ftp.mutt.org/pub/mutt/ \
