--- a/security/mit-krb5/Makefile
+++ b/security/mit-krb5/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.27 2005/06/20 06:39:59 kristerw Exp $
+# $NetBSD: Makefile,v 1.28 2005/07/15 18:27:53 jlam Exp $
 
-DISTNAME=	krb5-1.4
+DISTNAME=	krb5-1.4.2
 PKGNAME=	mit-${DISTNAME:S/-signed$//}
 PKGREVISION=	2
 CATEGORIES=	security
