--- a/security/crack/Makefile
+++ b/security/crack/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.18 2005/03/24 21:13:00 wiz Exp $
+# $NetBSD: Makefile,v 1.19 2005/06/17 03:50:31 jlam Exp $
 
 DISTNAME=	crack5.0
 PKGNAME=	crack-5.0
+PKGREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	ftp://ftp.task.gda.pl/mirror/ftp.cert.org/pub/tools/crack/ \
 		ftp://ftp.cs.umn.edu/mirror00/ftp.win.tue.nl/pub/security/ \
